fix: remove Mockito dependency and fix build issues in benchmarking modules
- Remove prohibited Mockito dependencies from cui-benchmarking-common
- Replace Mockito-based tests with simpler test implementations
- Apply code formatting updates from pre-commit profile
- Update to use Path.of() instead of Paths.get() per Java 11+ standards
- Ensure all benchmarking modules compile and test successfully

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>